--- a/lake_layout.css
+++ b/lake_layout.css
@@ -1,11 +1,23 @@
 ﻿@charset "utf-8";
 
+@font-face {
+	font-family: 'Champagne';
+	src: url('cac_champagne.ttf') format('tff'), url('cac_champagne.woff') format('woff');
+}
+
+@font-face {
+	font-family: 'Dobkin';
+	src: url('DobkinPlain.ttf') format('tff'), url('DobkinPlain.woff') format('woff');
+}
+
 /*
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 2
    Case Problem 4
    
    The Great Lakescape Lodge Layout Styles
+   Author: Aiden Martinez
+   Date: 09.10.2018
    Filename: lake_layout.css
 
 */
@@ -18,66 +30,119 @@ body {
 	width: 100%;
 	max-width: 1020px;
 	min-width: 640px;
+	background-color: olivedrab;
 }
 
-body > header > img {
+body>header>img {
 	width: 100%;
 	display: block;
 	margin: 0;
 }
 
-body > section#leftcol {
+body>section#leftcol {
 	width: 70%;
 	float: left;
 	margin-left: 0%;
 	margin-right: 4%;
 }
 
-body > section#rightcol {
-	width: 24%;
-	float: left;
-	margin-right: 2%;
+body>section#rightcol {
+	width: 19.15em;
+	margin-left: 70%;
+	background-color: rgba(245, 212, 245, 0.904);
+	padding-bottom: 223.5px;
+	padding-top: 0.9px;
 }
+
+
+
 
 footer {
 	clear: both;
 }
 
-address, article, aside, blockquote, body, cite, 
-div, dl, dt, dd, em, figcaption, figure, footer, 
-h1, h2, h3, h4, h5, h6, header, html, img, 
-li, main, nav, ol, p, section, span, ul {
+address,
+article,
+aside,
+blockquote,
+body,
+cite,
+div,
+dl,
+dt,
+dd,
+em,
+figcaption,
+figure,
+footer,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+html,
+img,
+li,
+main,
+nav,
+ol,
+p,
+section,
+span,
+ul {
 
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box;  
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 
 /* Header Navigation */
 
-header > nav {
+header>nav {
 	display: table;
 	width: 100%;
 }
 
-header > nav > ul {
+header>nav>ul {
 	display: table-row;
 	list-style-type: none;
 }
 
-header > nav > ul > li {
+header>nav>ul>li {
 	display: table-cell;
 	text-align: center;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	background-color: crimson;
 }
 
-header > nav a {
+header>nav>ul>li>a:link,
+header>nav>ul>li>a:visited {
+	color: white;
+	text-decoration: unset;
+}
+
+header>nav>ul>li>a:hover,
+header>nav>ul>li>a:active {
+	background-color: rgba(165, 7, 38, 0.849);
+	color: gray;
+}
+
+
+header>nav a {
 	display: block;
 	width: 100%;
 }
 
 
 /* Section Layout */
+section#leftcol {
+	background-color: white;
+	margin-right: 5px;
+}
 
 section#leftcol aside {
 	width: 42%;
@@ -87,10 +152,95 @@ section#leftcol aside {
 	margin-bottom: 20px;
 }
 
+section#leftcol p {
+	padding-left: 10px;
+	padding-right: 10px;
+}
 
+/* The text below is for the 'Welcome' h1. */
+section#leftcol>h1:first-of-type {
+	font-family: 'Champagne';
+	font-size: 250%;
+	text-align: center;
+}
+
+/* The text below is the code for the left box beneath the body, in the leftcol. */
+section#leftcol>aside:first-of-type {
+	background-color: lightcoral;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+section#leftcol>aside:first-of-type ul>li {
+	list-style-type: square;
+	font-family: cursive;
+}
+
+/* The text below is the code for the right box beneath the body, in the leftcol. */
+section#leftcol>aside:nth-of-type(2) {
+	background-color: bisque;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+section#leftcol>aside:nth-of-type(2) h2 {
+	font-family: 'Dobkin';
+	font-weight: bold;
+}
+
+section#leftcol>aside:nth-of-type(2) p {
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* The text below is for the image with the white collar supremacist. */
 section#leftcol img {
 	width: 100%;
 	display: block;
 }
 
+/* The text below is for the opening, and closing, (respectively) quote for the blockquote element of the rightcol. */
+/* OPENING QUOTE */
+section#rightcol>blockquote::before {
+	content: open-quote;
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 1.6em;
+	font-weight: bold;
+}
 
+/* CLOSING QUOTE */
+section#rightcol>blockquote::after {
+	content: close-quote;
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 1.6em;
+	font-weight: bold;
+}
+
+section#rightcol>blockquote {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* The text below removes the list style markers for the rightcol links. */
+section#rightcol nav>ul>li {
+	list-style: none;
+}
+
+section#rightcol nav>ul>li>a:link,
+nav>ul>li>a>:visited {
+	text-decoration: unset;
+	font-family: 'Courier New', Courier, monospace;
+}
+
+section#rightcol h2 {
+	font-family: 'Champagne';
+	font-size: 200%;
+}
+
+
+body>footer {
+	background-color: gray;
+	color: white;
+	text-align: center;
+	font-family: 'Courier New', Courier, monospace;
+	font-variant-caps: small-caps;
+	font-style: italic;
+}
