--- a/lake_styles.css
+++ b/lake_styles.css
@@ -1,11 +1,13 @@
-﻿@/*
+﻿@charset "utf-8";
+
+/*
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 2
    Case Problem 4
    
    Great Lakescape Lodge Style Sheet
-   Author: 
-   Date:   
+   Author: Aiden Martinez
+   Date:   09.10.2018
    
    Filename: lake_styles.css
 
